feat: Configure networking and initial layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="fetch_weather_data">Weather data</string>
+    <string name="fetch_weather_button">Fetch Weather</string>
 </resources>
