--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="fetch_weather_data">Weather data</string>
-    <string name="fetch_weather_button">Fetch Weather</string>
     <string name="temperature_format">%.0f°</string>
+    <string name="weather_title">Weather</string>
 </resources>
